// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbcResourcesTable__Td Should render abc-resources-table__td_type_supplier 1`] = `
<td
  className="ta-component abc-resources-table__td abc-resources-table__td_type_supplier"
  data-lego="react"
  style={Object {}}
>
  <link
    key="name"
    onClick={[Function]}
    tabIndex="0"
    text="bar"
    theme="normal"
    url="/services/foo/"
  />
  <abc-resource-tags-container
    key="tags"
    maxCount={1}
    mix={
      Object {
        "block": "abc-resources-table",
        "elem": "tags",
      }
    }
    size="s"
    tags={
      Array [
        Object {
          "name": Object {
            "ru": "foo",
          },
        },
      ]
    }
  />
</td>
`;

exports[`AbcResourcesTable__Td Should render empty abc-resources-table__td_type_supplier 1`] = `
<td
  className="ta-component abc-resources-table__td abc-resources-table__td_type_supplier"
  data-lego="react"
  style={Object {}}
>
  <link
    key="name"
    onClick={[Function]}
    tabIndex="0"
    text="bar"
    theme="normal"
    url="/services/foo/"
  />
</td>
`;
